test_suite5/ALAN/test_suite/alan-2022-examples/failing/004030_mutation.alan
source B begin leave(7 begin relax end) end
